--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -346,55 +346,234 @@
   </section>
   <!-- === END OF INVESTMENT PLAN SECTION === -->
 
+  <!-- === ACHIEVEMENT SECTION === -->
   <section id="achievements">
     <div class="container">
         <section class="row">
-            <article class="col-12 col-md-7">
-                <div class="row g-5">
+            <article class="col-12 col-md-8 mx-auto">
+                <div class="text-center">
+                    <h1>
+                        Our Track Record of Success
+                    </h1>
+                    <p>
+                        At RiazVest, we’ve built a reputation for excellence by consistently 
+                        helping our clients grow their wealth.
+                    </p>
+                </div>
+            </article>
+        </section>
+
+        <section class="row pt-5">
+            <article class="col-12 col-md-8 offset-md-2">
+                <div class="row g-4">
                     <div class="col-6 col-md-4">
-                        <div>
+                        <div class="achievement">
                             <h3>$400M +</h3>
                             <p>Assets Managed</p>
                         </div>
                     </div>
 
                     <div class="col-6 col-md-4">
-                        <div>
+                        <div class="achievement">
                             <h3>17,000 +</h3>
                             <p>Satisfied Investors</p>
                         </div>
                     </div>
                         
                     <div class="col-6 col-md-4">
-                        <div>
+                        <div class="achievement">
                             <h3>7Yrs +</h3>
                             <p>Industry of Excellence</p>
                         </div>
                     </div>
 
                     <div class="col-6 col-md-4">
-                        <div>
+                        <div class="achievement">
                             <h3>95 % +</h3>
                             <p>Client Retention Rate</p>
                         </div>
                     </div>
 
                     <div class="col-6 col-md-4">
-                        <div>
+                        <div class="achievement">
                             <h3>$ 80M +</h3>
-                            <p>Profit in Returns</p>
+                            <p>Profit paid to Investors</p>
                         </div>
                     </div>
 
                     <div class="col-6 col-md-4">
-                        <div class="border border-success p-3">
+                        <div class="achievement">
                             <h3>100 %</h3>
                             <p>Transparent Operations</p>
                         </div>
                     </div>
                 </div>
-            </article>
+            </article>    
         </section>
     </div>
   </section>
+
+
+<section>
+    <div class="container">
+        <div class="row g-5">
+            <article class="col-12 col-md-8 mx-auto text-center">
+                <header class="py-5">
+                    <h1>What Our Investors Say</h1>
+                    <p>
+                        Hear from our clients who have grown their wealth with us.
+                    </p>
+                </header>
+            </article>
+        </div>
+    </div>
+</section>
+<div id="carouselExampleFade" class="carousel slide carousel-fade">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <section class="container">
+                <div class="row">
+                    <article class="col-12 col-md-4">
+                        <div class="border p-4 rounded-5 bg-light">
+                            <span>Ratingm 1</span>
+                            <p>
+                                I love the predictability that comes with the Cryptocurrency using signals. 
+                                As someone who prefers low-risk investments, 
+                                RiazVest offered the perfect solution to help me secure my future while earning steady returns.
+                            </p>
+                            <div class="d-flex">
+                                <img 
+                                    class="img-fluid rounded-circle" 
+                                    src="{% static 'images/bg_investment.jpg' %}" 
+                                    alt="profile image"
+                                    style="height: 70px; width: 70px;"
+                                >
+                                <div class="ps-3">
+                                    <h5> Emily Chen </h5>
+                                    <h6>School Teacher</h6>
+                                    <h6>Bitcoin Cryptocurrency</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="col-12 col-md-4">
+                        <div class="border p-4 rounded-5">
+                            <span>Rating 2</span>
+                            <p class="pt-2 pb-4">
+                                Investing in the Oil & Gas plan through RiazVest has been an eye-opener. 
+                                The returns have been consistent, 
+                                and the platform makes it easy to track my profits. 
+                                I've already recommended it to my colleagues!
+                            </p>
+                            <div class="d-flex">
+                                <img 
+                                    class="img-fluid rounded-circle" 
+                                    src="{% static 'images/bg_investment.jpg' %}" 
+                                    alt="profile image"
+                                    style="height: 70px; width: 70px;"
+                                >
+                                <div class="ps-3">
+                                    <h5>James Patterson</h5>
+                                    <h6>Energy Consultants</h6>
+                                    <h6>Oil & Gas Plan</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="col-12 col-md-4">
+                        <div class="border p-4 rounded-5">
+                            <span>Rating 3</span>
+                            <p>
+                                The Tech Plan at RiazVest really resonated with me, as I wanted to invest in cutting-edge industries. 
+                                My experience has been fantastic so far, 
+                                with excellent returns and an intuitive platform.
+                            </p>
+                            <div class="d-flex">
+                                <img 
+                                    class="img-fluid rounded-circle" 
+                                    src="{% static 'images/bg_investment.jpg' %}" 
+                                    alt="profile image"
+                                    style="height: 70px; width: 70px;"
+                                >
+                                <div class="ps-3">
+                                    <h5> Olivia Carter</h5>
+                                    <h6> Seed Investor </h6>
+                                    <h6>AI and Web3 Plan</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </div>
+        <div class="carousel-item">
+            <section class="container">
+                <div class="row g-5">
+                    <article class="col-12 col-md-4">
+                        <div class="border p-4 rounded-5">
+                            <span>Rating 4</span>
+                            <p>
+                                Investing in real estate was a new venture for me, but RiazVest made it so easy to get started. 
+                                The transparency and customer support have been top-notch, 
+                                and I'm seeing consistent growth every week.
+                            </p>
+                            <div class="d-flex">
+                                <img src="" alt="profile image">
+                                <div class="ps-3">
+                                    <h5> Engineer </h5>
+                                    <h6>What they do</h6>
+                                    <h6>Real Estate Plan</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="col-12 col-md-4">
+                        <div class="border p-4 rounded-5">
+                            <span>Rating 5</span>
+                            <p>
+                                The Real Estate Plan on RiazVest gave me an opportunity to diversify 
+                                my portfolio without the usual hassle of property management. 
+                                It’s reliable, straightforward, and the returns speak for themselves.
+                            </p>
+                            <div class="d-flex">
+                                <img src="" alt="profile image">
+                                <div class="ps-3">
+                                    <h5> Robert Garcia</h5>
+                                    <h6>Property Devloper </h6>
+                                    <h6>Real Estate Plan</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="col-12 col-md-4">
+                        <div class="border p-4 rounded-5">
+                            <span>Rating 6</span>
+                            <p>
+                                Investing in the Oil & Gas plan through RiazVest has been an eye-opener. 
+                                The returns have been consistent, and the platform makes it easy to track my profits. 
+                                I've already recommended it to my colleagues!
+                            </p>
+                            <div class="d-flex">
+                                <img src="" alt="profile image">
+                                <div class="ps-3">
+                                    <h5> Sarah Williams</h5>
+                                    <h6>Financial Analyst</h6>
+                                    <h6>Silver and Gold Plan</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </div>
+    </div>
+    <button class="carousel-control-prev pe-5" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="bi bi-caret-left-fill" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next ps-5" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="bi bi-caret-right-fill" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+    </div>
 {% endblock content %}
