Proper styling of the carousel

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -434,7 +434,7 @@
             <section class="container">
                 <div class="row">
                     <article class="col-12 col-md-4">
-                        <div class="border p-4 rounded-5 bg-light">
+                        <div class="testimony border bg-light">
                             <span>Ratingm 1</span>
                             <p>
                                 I love the predictability that comes with the Cryptocurrency using signals. 
@@ -451,15 +451,15 @@
                                 <div class="ps-3">
                                     <h5> Emily Chen </h5>
                                     <h6>School Teacher</h6>
-                                    <h6>Bitcoin Cryptocurrency</h6>
+                                    <h6 class="choice-plan">Bitcoin Cryptocurrency plan</h6>
                                 </div>
                             </div>
                         </div>
                     </article>
                     <article class="col-12 col-md-4">
-                        <div class="border p-4 rounded-5">
+                        <div class="testimony border bg-light">
                             <span>Rating 2</span>
-                            <p class="pt-2 pb-4">
+                            <p>
                                 Investing in the Oil & Gas plan through RiazVest has been an eye-opener. 
                                 The returns have been consistent, 
                                 and the platform makes it easy to track my profits. 
@@ -475,13 +475,13 @@
                                 <div class="ps-3">
                                     <h5>James Patterson</h5>
                                     <h6>Energy Consultants</h6>
-                                    <h6>Oil & Gas Plan</h6>
+                                    <h6 class="choice-plan">Oil & Gas Plan</h6>
                                 </div>
                             </div>
                         </div>
                     </article>
                     <article class="col-12 col-md-4">
-                        <div class="border p-4 rounded-5">
+                        <div class="testimony border bg-light">
                             <span>Rating 3</span>
                             <p>
                                 The Tech Plan at RiazVest really resonated with me, as I wanted to invest in cutting-edge industries. 
@@ -498,7 +498,7 @@
                                 <div class="ps-3">
                                     <h5> Olivia Carter</h5>
                                     <h6> Seed Investor </h6>
-                                    <h6>AI and Web3 Plan</h6>
+                                    <h6 class="choice-plan">AI and Web3 Plan</h6>
                                 </div>
                             </div>
                         </div>
@@ -510,7 +510,7 @@
             <section class="container">
                 <div class="row g-5">
                     <article class="col-12 col-md-4">
-                        <div class="border p-4 rounded-5">
+                        <div class="testimony border p-4 rounded-5">
                             <span>Rating 4</span>
                             <p>
                                 Investing in real estate was a new venture for me, but RiazVest made it so easy to get started. 
@@ -518,17 +518,22 @@
                                 and I'm seeing consistent growth every week.
                             </p>
                             <div class="d-flex">
-                                <img src="" alt="profile image">
+                                <img 
+                                    class="img-fluid rounded-circle" 
+                                    src="{% static 'images/bg_investment.jpg' %}" 
+                                    alt="profile image"
+                                    style="height: 70px; width: 70px;"
+                                >
                                 <div class="ps-3">
                                     <h5> Engineer </h5>
                                     <h6>What they do</h6>
-                                    <h6>Real Estate Plan</h6>
+                                    <h6 class="choice-plan">Real Estate Plan</h6>
                                 </div>
                             </div>
                         </div>
                     </article>
                     <article class="col-12 col-md-4">
-                        <div class="border p-4 rounded-5">
+                        <div class="testimony border rounded-5">
                             <span>Rating 5</span>
                             <p>
                                 The Real Estate Plan on RiazVest gave me an opportunity to diversify 
@@ -536,17 +541,22 @@
                                 It’s reliable, straightforward, and the returns speak for themselves.
                             </p>
                             <div class="d-flex">
-                                <img src="" alt="profile image">
+                                <img 
+                                    class="img-fluid rounded-circle" 
+                                    src="{% static 'images/bg_investment.jpg' %}" 
+                                    alt="profile image"
+                                    style="height: 70px; width: 70px;"
+                                >
                                 <div class="ps-3">
                                     <h5> Robert Garcia</h5>
                                     <h6>Property Devloper </h6>
-                                    <h6>Real Estate Plan</h6>
+                                    <h6 class="choice-plan">Real Estate Plan</h6>
                                 </div>
                             </div>
                         </div>
                     </article>
                     <article class="col-12 col-md-4">
-                        <div class="border p-4 rounded-5">
+                        <div class="testimony border rounded-5">
                             <span>Rating 6</span>
                             <p>
                                 Investing in the Oil & Gas plan through RiazVest has been an eye-opener. 
@@ -554,11 +564,16 @@
                                 I've already recommended it to my colleagues!
                             </p>
                             <div class="d-flex">
-                                <img src="" alt="profile image">
+                                <img 
+                                    class="img-fluid rounded-circle" 
+                                    src="{% static 'images/bg_investment.jpg' %}" 
+                                    alt="profile image"
+                                    style="height: 70px; width: 70px;"
+                                >
                                 <div class="ps-3">
                                     <h5> Sarah Williams</h5>
                                     <h6>Financial Analyst</h6>
-                                    <h6>Silver and Gold Plan</h6>
+                                    <h6 class="choice-plan">Silver and Gold Plan</h6>
                                 </div>
                             </div>
                         </div>
