complete the testimonial slide for large screen

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -428,7 +428,7 @@
         </div>
     </div>
 </section>
-<div id="carouselExampleFade" class="carousel slide carousel-fade">
+<div id="carouselExampleFade" class="carousel slide carousel-slide">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <section class="container">
