Carousel for small and medium screen

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -428,7 +428,9 @@
         </div>
     </div>
 </section>
-<div id="carouselExampleFade" class="carousel slide carousel-slide">
+
+<!-- === Carousel for large screen-->
+<div id="carouselExampleFade" class="carousel slide carousel-slide d-none d-sm-none d-md-none d-lg-block">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <section class="container">
@@ -590,5 +592,179 @@
         <span class="bi bi-caret-right-fill" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
+</div>
+
+    <!-- === For small and medium screen screen ===-->
+    <div id="carouselExampleFade1" class="carousel slide carousel-slide d-none d-sm-block d-md-block d-lg-none">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <section class="container">
+                    <div class="row">
+                        <article class="col-12 col-sm-6">
+                            <div class="testimony border bg-light">
+                                <span>Ratingm 1</span>
+                                <p>
+                                    I love the predictability that comes with the Cryptocurrency using signals. 
+                                    As someone who prefers low-risk investments, 
+                                    RiazVest offered the perfect solution to help me secure my future while earning steady returns.
+                                </p>
+                                <div class="d-flex">
+                                    <img 
+                                        class="img-fluid rounded-circle" 
+                                        src="{% static 'images/bg_investment.jpg' %}" 
+                                        alt="profile image"
+                                        style="height: 70px; width: 70px;"
+                                    >
+                                    <div class="ps-3">
+                                        <h5> Emily Chen </h5>
+                                        <h6>School Teacher</h6>
+                                        <h6 class="choice-plan">Bitcoin Cryptocurrency plan</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="col-12 col-sm-6">
+                            <div class="testimony border bg-light">
+                                <span>Rating 2</span>
+                                <p>
+                                    Investing in the Oil & Gas plan through RiazVest has been an eye-opener. 
+                                    The returns have been consistent, 
+                                    and the platform makes it easy to track my profits. 
+                                    I've already recommended it to my colleagues!
+                                </p>
+                                <div class="d-flex">
+                                    <img 
+                                        class="img-fluid rounded-circle" 
+                                        src="{% static 'images/bg_investment.jpg' %}" 
+                                        alt="profile image"
+                                        style="height: 70px; width: 70px;"
+                                    >
+                                    <div class="ps-3">
+                                        <h5>James Patterson</h5>
+                                        <h6>Energy Consultants</h6>
+                                        <h6 class="choice-plan">Oil & Gas Plan</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+            </div>
+
+            <div class="carousel-item">
+                <section class="container">
+                    <div class="row">
+                        <article class="col-12 col-sm-6">
+                            <div class="testimony border bg-light">
+                                <span>Rating 3</span>
+                                <p>
+                                    The Tech Plan at RiazVest really resonated with me, as I wanted to invest in cutting-edge industries. 
+                                    My experience has been fantastic so far, 
+                                    with excellent returns and an intuitive platform.
+                                </p>
+                                <div class="d-flex">
+                                    <img 
+                                        class="img-fluid rounded-circle" 
+                                        src="{% static 'images/bg_investment.jpg' %}" 
+                                        alt="profile image"
+                                        style="height: 70px; width: 70px;"
+                                    >
+                                    <div class="ps-3">
+                                        <h5> Olivia Carter</h5>
+                                        <h6> Seed Investor </h6>
+                                        <h6 class="choice-plan">AI and Web3 Plan</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="col-12 col-sm-6">
+                            <div class="testimony border p-4 rounded-5">
+                                <span>Rating 4</span>
+                                <p>
+                                    Investing in real estate was a new venture for me, but RiazVest made it so easy to get started. 
+                                    The transparency and customer support have been top-notch, 
+                                    and I'm seeing consistent growth every week.
+                                </p>
+                                <div class="d-flex">
+                                    <img 
+                                        class="img-fluid rounded-circle" 
+                                        src="{% static 'images/bg_investment.jpg' %}" 
+                                        alt="profile image"
+                                        style="height: 70px; width: 70px;"
+                                    >
+                                    <div class="ps-3">
+                                        <h5> Engineer </h5>
+                                        <h6>What they do</h6>
+                                        <h6 class="choice-plan">Real Estate Plan</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+            </div>
+            <div class="carousel-item">
+                <section class="container">
+                    <div class="row g-5">
+                        <article class="col-12 col-sm-6">
+                            <div class="testimony border rounded-5">
+                                <span>Rating 5</span>
+                                <p>
+                                    The Real Estate Plan on RiazVest gave me an opportunity to diversify 
+                                    my portfolio without the usual hassle of property management. 
+                                    It’s reliable, straightforward, and the returns speak for themselves.
+                                </p>
+                                <div class="d-flex">
+                                    <img 
+                                        class="img-fluid rounded-circle" 
+                                        src="{% static 'images/bg_investment.jpg' %}" 
+                                        alt="profile image"
+                                        style="height: 70px; width: 70px;"
+                                    >
+                                    <div class="ps-3">
+                                        <h5> Robert Garcia</h5>
+                                        <h6>Property Devloper </h6>
+                                        <h6 class="choice-plan">Real Estate Plan</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="col-12 col-sm-6">
+                            <div class="testimony border rounded-5">
+                                <span>Rating 6</span>
+                                <p>
+                                    Investing in the Oil & Gas plan through RiazVest has been an eye-opener. 
+                                    The returns have been consistent, and the platform makes it easy to track my profits. 
+                                    I've already recommended it to my colleagues!
+                                </p>
+                                <div class="d-flex">
+                                    <img 
+                                        class="img-fluid rounded-circle" 
+                                        src="{% static 'images/bg_investment.jpg' %}" 
+                                        alt="profile image"
+                                        style="height: 70px; width: 70px;"
+                                    >
+                                    <div class="ps-3">
+                                        <h5> Sarah Williams</h5>
+                                        <h6>Financial Analyst</h6>
+                                        <h6 class="choice-plan">Silver and Gold Plan</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <button class="carousel-control-prev pe-5" type="button" data-bs-target="#carouselExampleFade1" data-bs-slide="prev">
+            <span class="bi bi-caret-left-fill" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next ps-5" type="button" data-bs-target="#carouselExampleFade1" data-bs-slide="next">
+            <span class="bi bi-caret-right-fill" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
+    
 {% endblock content %}
