--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -432,6 +432,8 @@
 <!-- === Carousel for large screen-->
 <div id="carouselExampleFade" class="carousel slide carousel-slide d-none d-sm-none d-md-none d-lg-block">
     <div class="carousel-inner">
+
+        <!-- Item One -->
         <div class="carousel-item active">
             <section class="container">
                 <div class="row">
@@ -508,6 +510,8 @@
                 </div>
             </section>
         </div>
+
+        <!-- Item Two -->
         <div class="carousel-item">
             <section class="container">
                 <div class="row g-5">
@@ -597,6 +601,8 @@
     <!-- === For small and medium screen screen ===-->
     <div id="carouselExampleFade1" class="carousel slide carousel-slide d-none d-sm-block d-md-block d-lg-none">
         <div class="carousel-inner">
+
+            <!-- Item One -->
             <div class="carousel-item active">
                 <section class="container">
                     <div class="row">
@@ -651,6 +657,7 @@
                 </section>
             </div>
 
+            <!-- Item Two -->
             <div class="carousel-item">
                 <section class="container">
                     <div class="row">
@@ -704,6 +711,8 @@
                     </div>
                 </section>
             </div>
+
+            <!-- Item Three -->
             <div class="carousel-item">
                 <section class="container">
                     <div class="row g-5">
@@ -770,6 +779,7 @@
     <!-- === Carousel for smallest screen ===-->
     <div id="carouselExampleFade2" class="carousel slide carousel-slide d-blcok d-sm-none d-md-none d-lg-none">
         <div class="carousel-inner">
+            <!-- Item One -->
             <div class="carousel-item active">
                 <section class="container">
                     <div class="row">
@@ -800,6 +810,7 @@
                 </section>
             </div>
             
+            <!-- Item Two -->
             <div class="carousel-item">
                 <section class="container">
                     <div class="row">
@@ -831,6 +842,7 @@
                 </section>
             </div>
 
+            <!-- Item Three -->
             <div class="carousel-item">
                 <section class="container">
                     <div class="row">
@@ -861,6 +873,7 @@
                 </section>
             </div>
 
+            <!-- Item Four -->
             <div class="carousel-item">
                 <section class="container">
                     <div class="row">
@@ -891,6 +904,7 @@
                 </section>
             </div>
 
+            <!-- Item Five -->
             <div class="carousel-item">
                 <section class="container">
                     <div class="row">
@@ -921,6 +935,7 @@
                 </section>
             </div>
             
+            <!-- Item 6-->
             <div class="carousel-item">
                 <section class="container">
                     <div class="row g-5">
