--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -364,7 +364,7 @@
         </section>
 
         <section class="row pt-5">
-            <article class="col-12 col-md-8 offset-md-2">
+            <article class="col-12 col-md-12  col-lg-8 offset-lg-2">
                 <div class="row g-4">
                     <div class="col-6 col-md-4">
                         <div class="achievement">
