adjust the plans to be fully responsive

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -222,7 +222,7 @@
             <section class="row g-5">
 
                 <!-- === SILVER AND GOLD column  === -->
-                <article class="col-12 col-sm-6 col-md-4">
+                <article class="col-12 col-lg-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="silver_gold">
                         <div class="plan-details">
                             <h2 class="h3">Silver and Gold</h2>
@@ -258,7 +258,7 @@
                 </article>
 
                 <!-- === OIL AND GAS column  === -->
-                <article class="col-12 col-sm-6 col-md-4">
+                <article class="col-12 col-lg-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="oil-gas">
                         <div class="plan-details">
                             <h2 class="h3">Oil and Gas</h2>
@@ -294,7 +294,7 @@
                 </article>
 
                 <!-- === REAL ESTATE column  === -->
-                <article class="col-12 col-sm-6 col-md-4">
+                <article class="col-12  col-lg-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="realestates">
                         <div class="plan-details">
                             <h2 class="h3">Real Estates</h2>
@@ -330,17 +330,19 @@
                 </article>
                 
                 <!-- === Manage the see more -->
-                <a 
-                    href="#" 
-                    class="fw-bolder w-auto d-flex ms-auto" 
-                    style="font-size: 16px !important; color: darkslateblue;"
-                >
-                    See More 
-                    <i 
-                        class="bi bi-arrow-right ms-3" 
-                        style="color: darkslateblue;">
-                    </i>
-                </a>
+                <article class="col-12 ms-auto">
+                    <a 
+                        href="#" 
+                        class="fw-bolder w-auto d-flex justify-content-end" 
+                        style="font-size: 16px !important; color: darkslateblue;"
+                    >
+                        See More 
+                        <i 
+                            class="bi bi-arrow-right ms-3" 
+                            style="color: darkslateblue;">
+                        </i>
+                    </a>
+                </article>
             </section>
         </div>
   </section>
