adjust why choose us to be fully responsive

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -48,7 +48,7 @@
 <section id="whyChooseUs" class="bg-light">
     <div class="container">
         <section class="row g-5">
-            <article class="col-12 col-sm-6 col-md-4">
+            <article class="col-12 col-sm-6 col-lg-4">
                 <div class="pt-3">
                     <h1>Why Choose RiazVest</h1>
                     <p>
@@ -57,7 +57,7 @@
                 </div>
             </article>
 
-            <article class="col-12 col-sm-6 col-md-4">
+            <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5">
                     <div class="icon">
                         <i class="bi bi-coin"></i>
@@ -71,7 +71,7 @@
                 </div>
             </article>
 
-            <article class="col-12 col-sm-6 col-md-4">
+            <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5 h-100">
                     <div class="icon">
                         <i class="bi bi-check-all"></i>
@@ -84,7 +84,7 @@
                 </div>
             </article>
 
-            <article class="col-12 col-sm-6 col-md-4">
+            <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5 h-100">
                     <div class="icon">
                         <i class="bi bi-headset"></i>
@@ -97,7 +97,7 @@
                 </div>
             </article>
 
-            <article class="col-12 col-sm-6 col-md-4">
+            <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5 h-100">
                     <div class="icon">
                         <i class="bi bi-fingerprint"></i>
@@ -110,7 +110,7 @@
                 </div>
             </article>
 
-            <article class="col-12 col-sm-6 col-md-4">
+            <article class="col-12 col-sm-6 col-lg-4">
                 <div class="p-5 bg-white shadow-sm rounded-5">
                     <div class="icon">
                         <i class="bi bi-graph-up-arrow"></i>
