--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -4,9 +4,9 @@
 {% block content %}
 <section id="hero-page">
     <div class="container py-5">
-        <section class="row p-5 "
+        <section class="row p-2 p-md-5 "
         >
-            <article class="col-12 col-sm-6">
+            <article class="col-12 col-lg-6">
                 <header class="p-3 p-md-5">
                     <h1>Grow Your Wealth, Secure Your Future</h1>
                     <p class="pt-3 pb-5">
@@ -31,7 +31,7 @@
                 </header>
             </article>
 
-            <article class="col-12 col-sm-6">
+            <article class="col-12 col-lg-6">
                 <img 
                     src="{% static '/images/corporate-min.jpg' %}" 
                     alt=""
