--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -122,7 +122,7 @@
       <div class="footer-top">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-4 col-sm-6">
               <div class="footer-info">
                 <b class="fs-6 fw-bolder;">Wealth Wheel Investment Capital</b>
                 <p>
@@ -150,7 +150,7 @@
               </div>
             </div>
 
-            <div class="col-lg-2 col-md-6 footer-links">
+            <div class="col-md-4 col-sm-6 footer-links">
               <h4>Useful Links</h4>
               <ul>
                 <li>
@@ -176,25 +176,7 @@
               </ul>
             </div>
 
-            <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Our Services</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Relationsip Management</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Accurate Assessment</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Portfolio Management</a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="col-lg-4 col-md-6 footer-newsletter">
+            <div class="col-sm-6 col-md-4 footer-newsletter">
               <h4>Our Newsletter</h4>
               <p>
                 Stay informed and gain exclusive insights! Subscribe to our
