button color fully secondary

--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -420,7 +420,7 @@ background-color: var(--secondary-color);
     background: none;
     font-size: 16px;
     padding: 0 20px;
-    background: #dc3545;
+    background: var(--secondary-color);
     color: #fff;
     transition: 0.3s;
     border-radius: 0 4px 4px 0;
